# simple-file-upload-server

./: .gitignore  README.md  config.py  pyproject.toml
app/: __init__.py
app/download/: __init__.py  routes.py
app/upload/: routes.py
