[tool.poetry]
name = "simple-file-upload-server"
version = "0.1.0"
description = ""
authors = ["Toxe <toxe@toxe.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
